--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,13 @@
 @font-face {
   font-family: 'Proxima Soft';
-  src:  url('./font/ProximaSoft-Bold.ttf') format('truetype'),
-        url('./font/ProximaSoft-ExtraBold.ttf') format('truetype'),
-        url('./font/ProximaSoft-Light.ttf') format('truetype'),
-        url('./font/ProximaSoft-Medium.ttf') format('truetype'),
-        url('./font/ProximaSoft-Regular.ttf') format('truetype'),
-        url('./font/ProximaSoft-SemiBold.ttf') format('truetype'),
-        url('./font/ProximaSoft-Thin.ttf') format('truetype');
+  src: url('./font/ProximaSoft-Bold.ttf') format('truetype');
+  font-weight: bold;
+}
+
+@font-face {
+  font-family: 'Proxima Soft';
+  src: url('./font/ProximaSoft-Regular.ttf') format('truetype');
+  font-weight: normal
 }
 
 body {
@@ -14,8 +15,10 @@ body {
   overflow: hidden;
 }
 
-html, body, #root {
-  height:100%
+html,
+body,
+#root {
+  height: 100%
 }
 
 * {
